fix hover removed open all, re-align new item count

--- a/public/stylesheets/sass/ce1as.sass
+++ b/public/stylesheets/sass/ce1as.sass
@@ -979,7 +979,7 @@ ul.qa_tabs
 		cursor: pointer
 		div.new_items
 			position: absolute
-			top: 34px
+			top: 28px
 			font-size: .8em
 			text-align: center
 			color: black
@@ -991,7 +991,7 @@ ul.qa_tabs
 		width: 104px
 		background-position : 0 -100px
 		div.new_items	
-			width: 79px
+			width: 72px
 	li.discuss_tab.active
 		background-position : 0 0
 	li.discuss_tab.hover
@@ -1021,7 +1021,7 @@ ul.qa_tabs
 		width: 91px
 		background-position : -366px -100px
 		div.new_items	
-			width: 91px
+			width: 87px
 	li.listen_tab.active
 		background-position : -366px 0
 	li.listen_tab.hover
